card.css
/* ... */
.utilities-move-left .iconify {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    font-size: 1rem;
}
.schedule-of-costs h3 {
    margin-top: 1.5em;
    font-weight: 600;
}

/*  ........................transaction area ........................................................ */
.transactions-area{
    padding: 1.6em;
    width: 30%;
    /* border: 1px solid grey; */
    border-left: 0.15em solid rgb(173, 173, 173,0.2);
    background: white;
    border-top-right-radius: 0.39em;
    border-bottom-right-radius: 0.39em;
}   
/* transaction header */
.transactions-area header {
    position: relative;
    /* margin-bottom: 1.5em; */
}

.transactions-area h1 {
    font-size: 1.7rem;
    font-weight: 700;
}

.transactions-area header h4 {
    position: absolute;
    font-weight: 500;
    color: rgb(173, 173, 173);
    right: 0;
    top: 0.4em;
}
.transactions-area header h4 i {
    margin-left: 0.4em;
    font-size: 0.7rem;
}

.transactions-area nav {
    margin-top: 0.3em;
    margin-bottom: 0.9em;
}
.transactions-area li {
    font-size: 1rem;
    font-weight: 500;
    display: inline-block;
    color: rgb(173, 173, 173);
    /* border: 1px solid black; */
    width: 25%;
    /* margin-right: 0.5em; */
    padding-right: 0.45em;
    
}
.transactions-area li:first-child {
    width: 10%;
    padding-right: 0.9em;
}

/* all transactions block area  */

.transaction-details {
    position: relative;
    border-bottom: 0.15em solid rgb(173, 173, 173,0.2);
    height:12.5%;
    transition: all var(--transition-fast);
    cursor: pointer;
    padding: 0.5em;
    margin: 0 -0.5em;
    border-radius: 8px;
}

.transaction-details:hover {
    background: rgba(247, 247, 247, 0.5);
    transform: translateX(4px);
    border-bottom-color: transparent;
}

.transaction-details:active {
    transform: scale(0.98);
}

.transaction-details i {
    background-color: rgb(247, 247, 247);
    padding: 0.8em;
    border-radius: 50%;
    position: absolute;
    top: 22%;
    left:0;
    transition: all var(--transition-med);
    box-shadow: var(--shadow-sm);
}

.transaction-details:hover i {
    transform: rotate(360deg) scale(1.1);
    box-shadow: var(--shadow-md);
}

.transaction-details  .amount{
    position: absolute;
    top:30%;
    right:0;
    
}

.transaction-details .expense {
    position: absolute;
    top: 22%;
    left: 18%;
    /* font-size: 1rem; */
}
.transaction-details h5 {
    position: absolute;
    top: 50%;
    left: 18%;
    color: rgb(173, 173, 173);
    font-weight: 500;
}

.black-area {
    box-sizing: border-box;
    height: 22%;
    margin-top: 0.7em;
    background: linear-gradient(135deg, rgb(45, 45, 45) 0%, rgb(25, 25, 25) 100%);
    border-radius: 0.39em;
    color: white;
    padding: 1em;
    box-shadow: var(--shadow-md);
    transition: all var(--transition-med);
    cursor: pointer;
    position: relative;
    overflow: hidden;
}

.black-area::before {
    content: '';
    position: absolute;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100%;
    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.1), transparent);
    transition: left 0.5s;
}

.black-area:hover::before {
    left: 100%;
}

.black-area:hover {
    transform: translateY(-4px);
    box-shadow: var(--shadow-lg);
}

.black-area h6 {
    margin-top: 1.5em;
}
.black-area h6 i {
    padding: 1em;
    font-size: 0.5rem;
}
/* ... */

